src/objects/TR1__Candidates_Marketed__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidates Marketed (Candidate)</relationshipLabel>
        <relationshipName>Candidates_Marketed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Lead</label>
        <referenceTo>TR1__Job_Leads__c</referenceTo>
        <relationshipLabel>Candidates Marketed</relationshipLabel>
        <relationshipName>Candidates_Marketed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Candidates Marketed</relationshipLabel>
        <relationshipName>Candidates_Marketed</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Candidates Marketed</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000}-{00}</displayFormat>
        <label>Candidates Marketed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates Marketed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>